# lbx-tool

./: CMakeLists.txt  README.md
data/: lbx-mime.xml  lbx-tool.desktop
resources/: lbx-mime.xml  lbx-tool.qrc  lbx-tool.rc  lbx-tool_mingw.rc  lbx-tool_msvc.rc  tool.rc
src/: tool.cpp
src/gui/: Command.cpp  Command.h  Gui.h  Model.cpp  Model.h  Window.cpp  Window.h
